--- a/RocketApp/Infrastructure/Sources/UIToolkit/Resources/de.lproj/Localizable.strings
+++ b/RocketApp/Infrastructure/Sources/UIToolkit/Resources/de.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 // Rocket list
 "rockets" = "Die Raketen!";
-"first.flight" = "Der erste Flug!";
+"first_flight" = "Der erste Flug!";
 
 // Rocket detail
 "overview" = "Der Überblick!";
@@ -8,11 +8,18 @@
 "height" = "Die Höhe!";
 "diameter" = "Der DurchMesser!";
 "mass" = "Die Masse!";
-"first.stage" = "Die erste Stuffe!";
-"second.stage" = "Die zweite Stuffe!";
+"us_metrics" = "Die schweine amerikanisch metriken!";
+"eu_metrics" = "Die EU metriken!";
+"first_stage" = "Die erste Stuffe!";
+"second_stage" = "Die zweite Stuffe!";
+"reusable" = "Wiederverwenbar!";
+"not_reusable" = "Nicht wiedervervenbar!";
+"engines" = "Motoren!";
+"tons_of_fuel" = "Tonnen Kraftstoff!";
+"seconds_burn_time" = "Sekunden Brenndauer!";
 "photos" = "Die Fotogalerie!";
 
 // Rocket launch
 "launch" = "Der Start!";
-"move.up" = "Bewegen Sie Ihr Telefon nach oben, um die Rakete zu starten!";
-"launch.successful" = "Start erfolgreich!";
+"move_up" = "Bewegen Sie Ihr Telefon nach oben, um die Rakete zu starten!";
+"launch_successful" = "Start erfolgreich!";
