--- a/RocketApp/Infrastructure/Sources/UIToolkit/Resources/en.lproj/Localizable.strings
+++ b/RocketApp/Infrastructure/Sources/UIToolkit/Resources/en.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 // Rocket list
 "rockets" = "Rockets";
-"first.flight" = "First flight %@";
+"first_flight %@" = "First flight: %@";
 
 // Rocket detail
 "overview" = "Overview";
@@ -8,11 +8,18 @@
 "height" = "Height";
 "diameter" = "Diameter";
 "mass" = "Mass";
-"first.stage" = "First stage";
-"second.stage" = "Second stage";
+"us_metrics" = "US metrics";
+"eu_metrics" = "EU metrics";
+"first_stage" = "First stage";
+"second_stage" = "Second stage";
+"reusable" = "Reusable";
+"not_reusable" = "Not reusable";
+"engines %lld" = "%lld Engines";
+"tons_of_fuel %lf" = "%.1lf Tons of fuel";
+"seconds_burn_time %lld" = "%lld Seconds burn-time";
 "photos" = "Photos";
 
 // Rocket launch
 "launch" = "Launch";
-"move.up" = "Move your phone up to launch the rocket.";
-"launch.successful" = "Launch successful!";
+"move_up" = "Move your phone up to launch the rocket.";
+"launch_successful" = "Launch successful!";
