Rocket launch tuned.

--- a/RocketApp/Infrastructure/Sources/UIToolkit/Resources/cz.lproj/Localizable.strings
+++ b/RocketApp/Infrastructure/Sources/UIToolkit/Resources/cz.lproj/Localizable.strings
@@ -1,6 +1,7 @@
 // Rocket list
 "rockets" = "Rakety";
 "first_flight" = "První let";
+"error" = "Nelze načíst data, přičina:";
 
 // Rocket detail
 "overview" = "Popis";
