--- a/RocketApp/Infrastructure/Sources/UIToolkit/Resources/de.lproj/Localizable.strings
+++ b/RocketApp/Infrastructure/Sources/UIToolkit/Resources/de.lproj/Localizable.strings
@@ -1,6 +1,7 @@
 // Rocket list
 "rockets" = "Die Raketen!";
 "first_flight" = "Der erste Flug!";
+"error" = "Cannot load data, cause:";
 
 // Rocket detail
 "overview" = "Der Überblick!";
