--- a/RocketApp/Infrastructure/Sources/UIToolkit/Resources/en.lproj/Localizable.strings
+++ b/RocketApp/Infrastructure/Sources/UIToolkit/Resources/en.lproj/Localizable.strings
@@ -22,5 +22,5 @@
 
 // Rocket launch
 "launch" = "Launch";
-"tilt %@" = "Tilt your phone to launch %@.";
+"tilt %@" = "Meters remaining to launch %@:";
 "launch_successful" = "Launch successful!";
