Reset button added.

--- a/RocketApp/Infrastructure/Sources/UIToolkit/Resources/cz.lproj/Localizable.strings
+++ b/RocketApp/Infrastructure/Sources/UIToolkit/Resources/cz.lproj/Localizable.strings
@@ -24,3 +24,4 @@
 "launch" = "Vypuštění";
 "tilt" = "Pro vypuštění %@ zbývá metrů:";
 "launch_successful" = "Start úspěšně zahájen!";
+"reset_launch" = "Restartujte let rakety";
