--- a/RocketApp/Infrastructure/Sources/UIToolkit/Resources/de.lproj/Localizable.strings
+++ b/RocketApp/Infrastructure/Sources/UIToolkit/Resources/de.lproj/Localizable.strings
@@ -24,3 +24,4 @@
 "launch" = "Der Start!";
 "tilt %@" = "Verbleibende Meter bis zum Start %@";
 "launch_successful" = "Start erfolgreich!";
+"reset_launch" = "Raketenstart zurücksetzen";
